[package]
name = "conf-hub"
version = "0.1.2"
edition = "2024"
description = "A modern, high-performance, and reactive configuration management library for Rust, designed for highly concurrent async environments."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xiao-xiang/conf-hub"
readme = "README.md"
keywords = ["config", "configuration", "async", "hot-reload", "nacos"]
categories = ["config"]
authors = ["1149520393@qq.com"]

[dependencies]
arc-swap = "1.8.2"
async-trait = "0.1.89"
dashmap = "6.1.0"
java-properties = "2.0.0"
lazy_static = "1.5.0"
nacos-sdk = "0.6.0"
regex = "1.12.3"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
